test/files/neg/t8219.check
t8219.scala:5: error: value + is not a member of Object
  o + ""
    ^
one error found
